[tool.poetry]
name = "repl_python3_GARTBOT"
version = "0.1.0"
description = ""
authors = ["RithikaSilva <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^4.4.0"
pyunsplash = "^1.0.0-rc.2"
Wand = "^0.6.7"
Pillow = "^9.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
